--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
           java-package: jdk+fx
 
       - name: Build and check with Gradle
-        run: ./gradlew check`
+        run: ./gradlew check
 
 #      - name: Perform IO redirection test (*NIX)
 #        if: runner.os == 'Linux'
